--- a/WebInterface/Video/index.html
+++ b/WebInterface/Video/index.html
@@ -38,11 +38,77 @@
 	<script type="text/javascript" src="main.js"></script>
 	<script type="text/javascript" src="queueAndDragHandler.js"></script>
 
+	<style type="text/css">
+	#overflow-menu {
+		top: 50px;
+		right: 1%;
+		width: 150px;
+		display: none;
+		z-index: 100000;
+		position: absolute;
+		background-color: white;
+		box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+	}
+
+	#overflow-menu button {
+		width: 100%;
+		border: none;
+		padding: 10px;
+		height: initial;
+		cursor: pointer;
+		position: initial;
+		background-color: transparent;
+		transition: background-color .3s ease;
+	}
+
+	header #overflow-btn {
+		left: unset;
+		right: 25px;
+	}
+
+	main #queueWrapper > button {
+		float: left;
+		width: 40px;
+		height: 40px;
+		border: none;
+		cursor: pointer;
+		position: relative;
+		border-radius: 100%;
+		transform: translateY(-90%);
+		background-color: transparent;
+	}
+
+	main #queueWrapper > button:before {
+		top: 0;
+		left: 0;
+		opacity: 0;
+		width: 100%;
+		height: 100%;
+		content: ' ';
+		display: block;
+		position: absolute;
+		border-radius: 100%;
+		will-change: opacity;
+		transition: opacity 0.3s ease;
+		background-color: rgba(0, 0, 0, 0.5);
+	}
+
+	main #queueWrapper > button:hover:before {
+		opacity: 1;
+	}
+</style>
+
 </head>
 <body>
 
+	<div id="overflow-menu">
+		<button func="toggleCollapseAll">Toggle collapse all</button>
+	</div>
+
 	<header>
+		<div><button id="back"><img src="../Assets/ic_arrow_back_white.svg"></button></div>
 		<div><h1>Videos</h1></div>
+		<div><button id="overflow-btn"><img src="../Assets/ic_more_vert_white.svg"></button></div>
 	</header>
 
 	<main>
@@ -105,6 +171,7 @@
 
 			<div id="queueWrapper">
 				<h4>Queue</h4>
+				<button onclick="clearQueue()" title="clear queue"><img src="../Assets/ic_clear_all_black.svg"></button>
 				<div id="queue" ondrop="drop(event)" ondragover="allowDrop(event)">
 					<i>Queue is empty</i>
 					<br>
