--- a/WebInterface/help.html
+++ b/WebInterface/help.html
@@ -471,6 +471,8 @@
 		<div>
 			<b>How do I set this up?</b>
 			<p>
+				You can download an installer <a href="https://github.com/jantje19/MusicStream-Installer/releases/latest">here</a>. Keep in mind that it can be buggy.
+				<br>
 				<a href="https://www.youtube.com/watch?v=UOG_lOcmQlo">You can watch this video</a> or follow these four steps:
 
 				<ol>
