--- a/WebInterface/help.html
+++ b/WebInterface/help.html
@@ -355,6 +355,10 @@
 
 				<hr>
 
+				<p>The audio player can accept a <i>query</i> search parameter, you can give it song titles and it will play them. If the song title contains an ampersand, replace it with <i>[AMP]</i>.</p>
+
+				<hr>
+
 				<h3>API</h3>
 
 				<h4 style="font-size: 0.8em;"><a href="/data/">Data</a></h4>
