--- a/WebInterface/Audio/createPlaylist.html
+++ b/WebInterface/Audio/createPlaylist.html
@@ -40,7 +40,7 @@
 
 		function getData() {
 			return new Promise((resolve, reject) => {
-				fetch('/data/').then(response => {
+				fetch('/data/', {credentials: 'same-origin'}).then(response => {
 					if (response.type === 'opaque') reject('Received a response, but it\'s opaque so can\'t examine it');
 					else if (response.status !== 200) reject('Looks like there was a problem. Status Code: ' + response.status);
 					else {
@@ -94,7 +94,7 @@
 						if (confirm('Are you sure the playlist is okay like this?')) {
 							const jsonData = {name: playlistName, songs: innerElems.map(obj => {return obj.innerText})};
 
-							fetch('/updatePlaylist/', {method: "POST", body: JSON.stringify(jsonData)}).then(response => {
+							fetch('/updatePlaylist/', {method: "POST", body: JSON.stringify(jsonData), credentials: 'same-origin'}).then(response => {
 								response.json().then(json => {
 									if (json.success) {
 										if (json.error) alert('Something on the server went wrong.\n' + json.info);
