--- a/WebInterface/Audio/managePlaylist.html
+++ b/WebInterface/Audio/managePlaylist.html
@@ -40,7 +40,7 @@
 
 		function getData(url) {
 			return new Promise((resolve, reject) => {
-				fetch(url).then(response => {
+				fetch(url, {credentials: 'same-origin'}).then(response => {
 					if (response.type === 'opaque') reject('Received a response, but it\'s opaque so can\'t examine it');
 					else if (response.status !== 200) reject('Looks like there was a problem. Status Code: ' + response.status);
 					else {
@@ -108,7 +108,7 @@
 					if (confirm('Are you sure the playlist is okay like this?')) {
 						const jsonData = {name: location.hash.replace('#', ''), songs: innerElems.map(obj => {return obj.innerText})};
 
-						fetch('/updatePlaylist/', {method: "POST", body: JSON.stringify(jsonData)}).then(response => {
+						fetch('/updatePlaylist/', {method: "POST", body: JSON.stringify(jsonData), credentials: 'same-origin'}).then(response => {
 							response.json().then(json => {
 								if (json.success) {
 									if (json.error) alert('Something on the server went wrong.\n' + json.info);
@@ -132,7 +132,7 @@
 						name: location.hash.replace('#', '')
 					}
 
-					fetch('updatePlaylist/', {method: 'POST', body: JSON.stringify(data)}).then(response => {
+					fetch('updatePlaylist/', {method: 'POST', body: JSON.stringify(data), credentials: 'same-origin'}).then(response => {
 						response.json().then(json => {
 							if (json.success == true)
 								window.location = window.location.host;
