--- a/WebInterface/Video/index.html
+++ b/WebInterface/Video/index.html
@@ -119,6 +119,11 @@
 					<div id="autoplay-time"></div>
 				</div>
 
+				<div id="video-time-jump">
+					<img src="/Assets/ic_forward_white.svg">
+					<img src="/Assets/ic_backwards_white.svg">
+				</div>
+
 				<div id="video-settings">
 					<div>
 						<label for="vidSpeed">Speed</label>
