--- a/WebInterface/Audio/index.html
+++ b/WebInterface/Audio/index.html
@@ -172,8 +172,8 @@
 		<div id="main">
 			<div id="songsContainer">
 				<h3>Songs</h3>
-				<button title="Pick random" style="float: right;" onclick="pickRandomSong()"><img src="Assets/ic_random_black.svg"></button>
-				<button title="Add whole list to queue (only use when you're confident in your system)" style="float: right;" onclick="addWholeSongsToQueue()"><img src="Assets/ic_playlist_add_black.svg"></button>
+				<button title="Pick random" style="float: right;" onclick="pickRandomSong()"><img src="/Assets/ic_random_black.svg"></button>
+				<button title="Add whole list to queue (only use when you're confident in your system)" style="float: right;" onclick="addWholeSongsToQueue()"><img src="/Assets/ic_playlist_add_black.svg"></button>
 				<hr style="border-bottom-color: lightgray;">
 				<span id="songCount">Amount: 0</span>
 				<select id="sort">
